# airbase

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: config.rs  main.rs  router.rs  state.rs
src/auth/: context.rs  handler.rs  jwt.rs  mod.rs  model.rs
src/db/: handler.rs  mod.rs
src/middleware/: auth.rs
src/realtime/: mod.rs  ws.rs
src/storage/: handler.rs  mod.rs
src/utils/: password.rs
