[package]
name = "airbase"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web
axum = { version = "0.7.4", features = ["ws", "multipart"] }
tokio = { version = "1.37.0", features = ["full"] }

# Serde
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

# Database
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "postgres",
    "sqlite",
    "json",
    "uuid"
] }

# Auth / crypto
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"
uuid = { version = "1.8.0", features = ["v4", "serde"] }

# HTTP helpers
tower-http = { version = "0.5.2", features = ["cors"] }

# Env
dotenvy = "0.15.7"
rand_core = "0.6"
# Logging (PINNED)
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter"
] }